--- a/README
+++ b/README
@@ -1,2 +1,2 @@
-Facial expression recognition is of vitsl importsnce in numerous fields of security like criminal investigation, identity verification, etc. 
+Facial expression recognition is of vital importance in numerous fields of security like criminal investigation, identity verification, etc. 
 This is the Matlab code for an emotion-recognition software.
